objects/SLSI__Office_Locations__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Address__c</fullName>
        <description>Address of the location.</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Company_Name__c</fullName>
        <description>Company Name</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Display_Order__c</fullName>
        <description>Will determine the order in which</description>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SLSI__Image__c</fullName>
        <description>Will allow a user to upload an image.</description>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLSI__Map__c</fullName>
        <label>Map</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SLSI__Phone__c</fullName>
        <description>Phone number for the location</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SLSI__TimeZoneSidKey__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific/Kiritimati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Chatham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Aucklan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Enderbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Tongatapu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kamchatka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Lord_Howe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Guadalcanal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Darwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Seoul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Hong_Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Taipei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Saigon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Rangoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Dacca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Yekaterinburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Katmandu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Office Locations</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>NAME</columns>
        <columns>SLSI__Display_Order__c</columns>
        <columns>SLSI__TimeZoneSidKey__c</columns>
        <columns>SLSI__Address__c</columns>
        <columns>SLSI__Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLSI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SLSI__Unique_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF( LOWER(VLOOKUP($ObjectType.SLSI__Office_Locations__c.Fields.Name,$ObjectType.SLSI__Office_Locations__c.Fields.Name, Name)) = LOWER(Name) &amp;&amp;  (ISCHANGED(Name) || ISNEW())  , true, false
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Office Name you entered already exists. Please enter a unique value.</errorMessage>
    </validationRules>
</CustomObject>